<resources>
    <string name="app_name">World News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>

    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!--Tab titles-->
    <string name="all_news_label">All News</string>
    <string name="business_label">Business</string>
    <string name="sports_label">Sports</string>
    <string name="tech_label">Technology</string>
    <string name="entertainment_label">Entertainment</string>
    <string name="health_label">Health</string>
    <string name="science_label">Science</string>

    <string name="headline_image_description">News headline preview image</string>
    <string name="content_description_article_image">Article image content description</string>
    <string name="action_share_title">Share</string>
    <string name="action_bookmark_title">Bookmark</string>
    <string name="news_detail_label">News Details</string>
    <string name="news_label">The News</string>
    <string name="latest_news_label">Latest News</string>
    <string name="bookmark_content_description">bookmark article</string>
    <string name="elapsed_time_label">25 minutes ago</string>
    <string name="article_title_hint">News Headline Header Will Go Or Goes Here</string>
    <string name="settings_label">Settings</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="key_health">key_health</string>
    <string name="key_entertainment">key_entertainment</string>
    <string name="key_sports">key_sports</string>
    <string name="key_science">key_science</string>
    <string name="key_tech">key_tech</string>
    <string name="key_business">key_business</string>
    <string name="key_all_news">key_all_news</string>
    <string name="key_dark_mode">dark_mode</string>
    <string name="days_format">%1$d days ago</string>
    <string name="hours_format">%1$d hours ago</string>
    <string name="minutes_format">%1$d minutes ago</string>
    <string name="about_a_minute"> a minute ago</string>
    <string name="error_loading_label">Something went wrong, please try again</string>
    <string name="retry_label">Retry</string>

</resources>