<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Dashboard">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/dashboardToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_menu"
        android:background="@color/purple_500"
        android:theme="@style/MainToolbarStyle"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboardToolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabBackground="@drawable/tab_selector"
                app:tabContentStart="20dp"
                app:tabGravity="fill"
                app:tabIndicatorHeight="@dimen/dp_0"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/white">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_news_label" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_label" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sports_label" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tech_label" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entertainment_label" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpNewsHeadline"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout"
                app:layout_constraintStart_toStartOf="parent"
                />
            <!--<ProgressBar
                android:id="@+id/pbLoadingHeadlines"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/vpNewsHeadline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vpNewsHeadline"
                app:layout_constraintTop_toTopOf="@+id/vpNewsHeadline" />
-->
            <TextView
                android:id="@+id/tvLatestNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/latest_news_label"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vpNewsHeadline" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLatestNews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLatestNews"
                tools:listitem="@layout/preview_article_item" />

            <ProgressBar
                android:id="@+id/pbLoadingLatestNews"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                app:layout_constraintEnd_toEndOf="@id/rvLatestNews"
                app:layout_constraintStart_toStartOf="@+id/rvLatestNews"
                app:layout_constraintTop_toTopOf="@+id/rvLatestNews" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>