<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_marginStart="@dimen/dp_8"
    android:layout_marginTop="@dimen/dp_8"
    android:layout_marginEnd="@dimen/dp_8"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgArticlePreview"
            android:layout_width="110dp"
            android:layout_height="125dp"
            android:contentDescription="@string/content_description_article_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tvArticleTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/article_title_hint"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgArticlePreview"
            app:layout_constraintTop_toTopOf="parent" />

        <!--<TextView
            android:id="@+id/tvNewsCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="10dp"
            android:text="@string/health_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imgArticlePreview"
            app:layout_constraintTop_toTopOf="@+id/imgArticlePreview" />
-->
        <TextView
            android:id="@+id/tvEllapsedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elapsed_time_label"
            app:layout_constraintBottom_toBottomOf="@+id/btnBookmark"
            app:layout_constraintStart_toStartOf="@+id/tvArticleTitle"
            app:layout_constraintTop_toTopOf="@+id/btnBookmark" />

        <ImageButton
            android:id="@+id/btnBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/bookmark_content_description"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvArticleTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvArticleTitle"
            app:srcCompat="@drawable/ic_bookmarked" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>